--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,3 +1,11 @@
+html{
+	background: url(../src/kevin-364843.jpg);
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover; 
+	font-family: Helvetica, Arial, sans-serif;
+}
 *{
 	margin:0px;
 	}
@@ -42,17 +50,23 @@
 	right: 0px;
 }
 .left {
-	height:50px;
-	width:50px;
+	height:70px;
+	width:70px;
 	position:absolute;
 	top:40%;
 	left:20px;
 	opacity:0.6;
 	transition: all .2s ease-in-out 0s;
 	}
+
+.imagenCentral{
+	height:400px;
+	width:650px;
+	margin-top: 50%;
+}
 .right {
-	height:50px;
-	width:50px;
+	height:70px;
+	width:70px;
 	position:absolute;
 	top:40%;
 	right:20px;
