--- a/CSS/style.css
+++ b/CSS/style.css
@@ -77,6 +77,7 @@ html{
   	left: 0px;
   	background-color:rgba(0,0,0,0.9);
   	text-align: center;
+	font-size: 40px;
 }
 .right_hold:hover .right {
 	opacity:1;
