--- a/CSS/style.css
+++ b/CSS/style.css
@@ -79,6 +79,10 @@ html{
   	text-align: center;
 	font-size: 40px;
 }
+.social {
+    padding-bottom: 0px;
+    font-size: 40px;
+}
 .right_hold:hover .right {
 	opacity:1;
 }
